--- a/My CV/index.html
+++ b/My CV/index.html
@@ -11,7 +11,7 @@
 
         <!-- CSS -->
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-        <link rel="stylesheet" href="./vendor/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="./vendor/css/bootstrap.min.css"> -->
         <link rel="stylesheet" href="./vendor/css/bootstrap.css">
         <link rel="stylesheet" href="./vendor/css/fontawesome-all.min.css">
         <link href="style.css" rel="stylesheet" type="text/css"/>
@@ -21,13 +21,13 @@
     </head>
     
     <body>
-        <div class="transbox">
+        <div class="transbox" >
             <!-- Tabs -->
 <section id="tabs">
         <div class="container">
             <h6 class="section-title h1">Floyd Melssen</h6>
             <div class=subheader>
-                    <span class="glyphicon glyphicon-envelope"></span> niefloyd -at- hotmail.com   |  <span class="glyphicon glyphicon-earphone"></span> 06-123456789
+                    <span class="glyphicon glyphicon-envelope"></span> niefloyd -at- hotmail.com       |      <span class="glyphicon glyphicon-earphone"></span> 06-123456789
             </div>
             <div class="row">
                 <div class="col-xs-12 ">
