laattse niet bootstrap

--- a/My CV/index.html
+++ b/My CV/index.html
@@ -23,11 +23,11 @@
     <body>
         <div class="transbox" >
             <!-- Tabs -->
-<section id="tabs">
+        <section id="tabs">
         <div class="container">
             <h6 class="section-title h1">Floyd Melssen</h6>
             <div class=subheader>
-                    <span class="glyphicon glyphicon-envelope"></span> niefloyd -at- hotmail.com       |      <span class="glyphicon glyphicon-earphone"></span> 06-123456789
+                    <span class="glyphicon glyphicon-envelope"></span> niefloyd -at- hotmail.com       |      <i class="fa fa-phone"></i> 06-123456789
             </div>
             <div class="row">
                 <div class="col-xs-12 ">
