--- a/My CV/about.html
+++ b/My CV/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p>Welcome to my website. I am Floyd Melssen and I am mad about <b>software testing</b>. With a keen eye and an out-of-the-box approach I like to tackle software that is in development and see under what circumstances your system can be broken. Additionally I have experience in <b>web development</b>, a combination that you might find, works especially well.</p>
+<p>Welcome to my website. My name is Floyd Melssen and I am an avid, yet mild-mannered <b>software tester</b>. With a keen eye and an out-of-the-box approach I like to tackle software that is in development and see under what circumstances your system can be broken. Additionally I have experience in <b>web development</b>, a combination that you might find, works especially well.</p>
 
-<p>Like most other people, I have some qualities. My colleagues would call me <b>...</b> My friends would call me <b>...</b> And my adversaries would call me <b>...</b></p>
+<p>Like most other people, there are some core qualities. I am <b>analytical</b> and like to dissect logical problems into manageable components. For me, <b>communication</b> is key and I believe that getting the message across is a vital point in the solution to your problem. I am a social <b>team player</b>, but at the same time capable of working autonomously.</p>
 
-<p>Wat gewauwel over mezelf</p> 
+<p>Apart from testing and developing, I enjoy being outdoors and if there's time, I go out hiking in the mountains (of which we have little in the aptly named Low Countries). When indoors I am an avid reader of gloomy and/or Russian novels and linguistic papers (neither gloomy nor Russian). I support <a href="http://www.nec-nijmegen.nl">my local team</a>.</p> 
 </body>
 </html>
