--- a/My CV/index.html
+++ b/My CV/index.html
@@ -66,8 +66,13 @@
 
                         <div class="tab-pane fade" id="nav-about" role="tabpanel" aria-labelledby="nav-about-tab">
                             This is a list of all my public repositories on Github. You are more than welcome to check them out and browse the code!
-                            <div id="repo">
-                                </div>
+                            <script type="text/javascript" src="mycv.js"></script>
+                            <script>
+                            $(function(){
+                            $("#repo").load("mycv.js");
+                             });
+                            </script>
+                            <div id="repo"></div>
 <!-- 
                             <div id="github-projects">  
                             Github Repo: <a href="https://github.com/fmels/curriculum">Online Resume</a>
@@ -86,12 +91,7 @@
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>   
 <script src="./vendor/js/event-monitor-1.0.0.js"></script>
 
-<script src="mycv.js" type="text/javascript"></script>
-<script>
-    $(function(){
-        $("#repo").load("mycv.js");
-    });
-</script>
+
 <script>
     $(function(){
     $("#include0_html").load("about.html");
