--- a/My CV/experience.html
+++ b/My CV/experience.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p>When I had waited a long time, very patiently, without hearing him lie down, I resolved to open a little --a very, very little crevice in the lantern. So I opened it --you cannot imagine how stealthily, stealthily --until, at length a simple dim ray, like the thread of the spider, shot from out the crevice and fell full upon the vulture eye.</p>
-
-<p>It was open --wide, wide open --and I grew furious as I gazed upon it. I saw it with perfect distinctness --all a dull blue, with a hideous veil over it that chilled the very marrow in my bones; but I could see nothing else of the old man's face or person: for I had directed the ray as if by instinct, precisely upon the damned spot.</p>
-        
-<p>And have I not told you that what you mistake for madness is but over-acuteness of the sense? --now, I say, there came to my ears a low, dull, quick sound, such as a watch makes when enveloped in cotton. I knew that sound well, too. It was the beating of the old man's heart. It increased my fury, as the beating of a drum stimulates the soldier into courage.</p>
+    <p>This is some introductory text about my experience. Don't forget to include your work experience and the certificates you're about to get!</p>
+    
+        <h3>Primary Education</h3>
+        <b>2013-2014</b> Catholic University Leuven: 
+        Foundation Degree in Slavistics and Eastern-European Studies
+        <br>
+        <b>2009-2013</b>
+        Radboud University Nijmegen: BA in Philosophy<br>
+        Thesis subject: Nothingness in Heideggers <i>Was ist Metaphysik?</i>
+        <br>
+        <b>2008-2012</b>
+        Dominicus College Nijmegen: VWO
+        <hr>
+        <h3>Secondary Education</h3>
+        <b>2018</b> Embrace IT:
+        Introduction to Testing & Web-Development
+        <br>
+        <b>2014</b> Pushkin Institute Moscow: 
+        Russian language and philology summer school
+        <br>
+        <b>2013</b> Pushkin Institute Moscow: 
+        Russian language and philology summer school
+        <hr>
+        <h3>Certificates</h3>
+        .....
+    </p> 
 </body>
 </html>
