--- a/My CV/skills.html
+++ b/My CV/skills.html
@@ -2,29 +2,36 @@
 <html>
 <body>
 <p>
-     
-        <h2>Skills</h2>
-    <ul>
-         <li>TMAP</li>
-         <li>Javascript</li>
-         <li>jQuery</li>
-         <li>HTML5</li>
-         <li>CSS3</li>
-         <li>Bootstrap</li>
-         <li>SAP</li>
-         <li>MS Office and its Linux counterparts</li>
-    </ul>
-        <h2>Languages:</h2>
-        <ul>
-        <li>Dutch: native</li>
-        <li>English: fluent</li>
-        <li>German: fluent</li>
-        <li>Russian: adequate</li>
-        <li>French: adequate</li>
-        <li>Polish: elementary</li>
-        <li>Spanish: elementary</li>
-    </ul>
+    Below is a list of my current skills. Hopefully, this list becomes outdated as soon as possible, as I am constantly learning and working to expand my knowledge.
 </p>
+<div id="skillcontainer">
+    <div id="left-column">
+        <h3>Programming languages and tools:</h3>
+    <ul>
+         <li> TMAP</li>
+         <li> Javascript</li>
+         <li> jQuery</li>
+         <li> HTML5</li>
+         <li> CSS3</li>
+         <li> Bootstrap</li>
+         <li> MS Office and its Linux counterparts</li>
+         <li> SAP</li>
+    </ul>
+    </div>
+
+    <div id="right-column">
+        <h3>Natural languages:</h3>
+        <ul>
+        <li> Dutch: native</li>
+        <li> English: fluent</li>
+        <li> German: fluent</li>
+        <li> Russian: adequate</li>
+        <li> French: adequate</li>
+        <li> Polish: elementary</li>
+        <li> Spanish: elementary</li>
+    </ul>
+    </div>
+</div>
 
 </body>
 </html>
