echt de laatste van woensdag

--- a/My CV/experience.html
+++ b/My CV/experience.html
@@ -2,30 +2,34 @@
 <html>
 <body>
     <p>This is some introductory text about my experience. Don't forget to include your work experience and the certificates you're about to get!</p>
-    
-        <h3>Primary Education</h3>
-        <b>2013-2014</b> Catholic University Leuven: 
-        Foundation Degree in Slavistics and Eastern-European Studies
-        <br>
-        <b>2009-2013</b>
-        Radboud University Nijmegen: BA in Philosophy<br>
-        Thesis subject: Nothingness in Heideggers <i>Was ist Metaphysik?</i>
-        <br>
-        <b>2008-2012</b>
-        Dominicus College Nijmegen: VWO
-        <hr>
-        <h3>Secondary Education</h3>
-        <b>2018</b> Embrace IT:
-        Introduction to Testing & Web-Development
-        <br>
-        <b>2014</b> Pushkin Institute Moscow: 
-        Russian language and philology summer school
-        <br>
-        <b>2013</b> Pushkin Institute Moscow: 
-        Russian language and philology summer school
-        <hr>
-        <h3>Certificates</h3>
-        .....
-    </p> 
+
+<h3>Working experience</h3>
+<b>2018 - now:</b> Software tester and web developer at <i>Embrace IT</i>.
+<br>
+<b>2017:</b> As a contract manager at the <i>University Hopital Brussels</i>, I was responsible for the implementation of a contract management system. Working closely together with the IT depertment, I coordinated functional changes and tested new releases from a user perspective. Additionally I was responsible for the internal quality evaluations and formed a liaison between the internal customer and the supplier.
+<hr>
+<h3>Primary Education</h3>
+<b>2013-2014:</b> Catholic University Leuven: 
+Foundation Degree in Slavistics and Eastern-European Studies
+<br>
+<b>2009-2013:</b>
+Radboud University Nijmegen: BA in Philosophy<br>
+Thesis subject: "Nothingness in Heideggers <i>Was ist Metaphysik?</i>
+<br>
+<b>2008-2012:</b>
+Dominicus College Nijmegen: VWO
+<hr>
+<h3>Secondary Education</h3>
+<b>2018:</b> Embrace IT:
+Introduction to Testing & Web-Development
+<br>
+<b>2014:</b> Pushkin Institute Moscow: 
+Russian language and philology summer school
+<br>
+<b>2013:</b> Pushkin Institute Moscow: 
+Russian language and philology summer school
+<hr>
+<h3>Certificates</h3>
+.....
 </body>
 </html>
