--- a/My CV/skills.html
+++ b/My CV/skills.html
@@ -15,6 +15,8 @@
          <li> CSS3</li>
          <li> Bootstrap</li>
          <li> MS Office and its Linux counterparts</li>
+         <li> Git</li>
+         <li> Jira</li>
          <li> SAP</li>
     </ul>
     </div>
