--- a/My CV/experience.html
+++ b/My CV/experience.html
@@ -1,35 +1,96 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <p>This is some introductory text about my experience. Don't forget to include your work experience and the certificates you're about to get!</p>
-
+    <br>
+    <p>"<i>Wisdom is the daughter of experience</i>," said somebody sometime. Possibly you disagree, but I have some interesting personal points to note anyway:</p>
+    
 <h3>Working experience</h3>
-<b>2018 - now:</b> Software tester and web developer at <i>Embrace IT</i>.
-<br>
-<b>2017:</b> As a contract manager at the <i>University Hopital Brussels</i>, I was responsible for the implementation of a contract management system. Working closely together with the IT depertment, I coordinated functional changes and tested new releases from a user perspective. Additionally I was responsible for the internal quality evaluations and formed a liaison between the internal customer and the supplier.
+<div class="container">
+    <div class="row">
+        <div class="col-2"><b>March 2018:</b></div>
+        <div class="col">Software tester and web developer at <u>Embrace IT</u></div>
+    </div>
+    <div class="row">
+        <div class="col-2"><b>2017:</b></div>
+        <div class="col">As a contract manager at the <u>University Hospital Brussels</u>, I was responsible for the implementation of a new contract management system. Working closely together with the IT department, I coordinated functional changes and tested new releases from a user perspective. Additionally I was responsible for the internal quality evaluations and formed a liaison between the internal customer and the supplier.</div>
+    </div>
+    <div class="row">
+        <div class="col-2"><b>2016:</b></div>
+        <div class="col">I was an independent international observer at the 2016 parliamentary elections in the Republic of Georgia. In the build up to the elections, I monitored the political conditions and reported on possible threats to the democratic process. During the elections, I collaborated with <i>IPHR</i> and through the <i>Norwegian Helsinki Foundation</i>, I reported my findings to the United Nations.</div>
+  </div>
+</div>
 <hr>
 <h3>Primary Education</h3>
-<b>2013-2014:</b> Catholic University Leuven: 
+<div class="container">
+        <div class="row">
+            <div class="col-2"><b>2013-2015:</b></div>
+            <div class="col">Catholic University Leuven:<br>
+                Foundation Degree in Slavistics and Eastern-European Studies
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2"><b>2009-2013</b></div>
+            <div class="col">Radboud University Nijmegen: BA in Philosophy<br>
+                Thesis subject: "Nothingness in Heideggers <i>Was ist Metaphysik?</i> "
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-2"><b>2008-2012:</b></div>
+            <div class="col">Dominicus College Nijmegen: VWO</div>
+      </div>
+    </div>
+<!-- <b>2013-2015:</b> Catholic University Leuven: 
 Foundation Degree in Slavistics and Eastern-European Studies
 <br>
 <b>2009-2013:</b>
 Radboud University Nijmegen: BA in Philosophy<br>
-Thesis subject: "Nothingness in Heideggers <i>Was ist Metaphysik?</i>
+
 <br>
 <b>2008-2012:</b>
-Dominicus College Nijmegen: VWO
+Dominicus College Nijmegen: VWO -->
 <hr>
 <h3>Secondary Education</h3>
-<b>2018:</b> Embrace IT:
-Introduction to Testing & Web-Development
-<br>
-<b>2014:</b> Pushkin Institute Moscow: 
-Russian language and philology summer school
-<br>
-<b>2013:</b> Pushkin Institute Moscow: 
-Russian language and philology summer school
+<div class="container">
+    <div class="row">
+        <div class="col-1"><b>2018:</b>
+        </div>
+        <div class="col">Embrace IT, Introduction to Testing & Web-Development
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-1"><b>2014:</b>
+        </div>
+        <div class="col">Pushkin Institute Moscow: Russian language and philology summer school
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-1"><b>2013:</b>
+        </div>
+        <div class="col">Pushkin Institute Moscow: Russian language and philology summer school
+        </div>
+    </div>
+</div>
 <hr>
 <h3>Certificates</h3>
-.....
+<div class="container">
+    <div class="row">
+        <div class="col-1"><b>2018:</b>
+        </div>
+        <div class="col">Sogeti: TMAP
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-1"><b>2018:</b>
+        </div>
+        <div class="col">W3C: Javascript, HTML5, CSS3
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-1"><b>2018:</b>
+        </div>
+        <div class="col">EXIN: Professional Scrum Master I
+        </div>
+    </div>
+</div>
 </body>
 </html>
