--- a/My CV/skills.html
+++ b/My CV/skills.html
@@ -7,30 +7,50 @@
 <div id="skillcontainer">
     <div id="left-column">
         <h3>Programming languages and tools:</h3>
-    <ul>
+    <ul class="tech-skills">
          <li> TMAP</li>
          <li> Javascript</li>
          <li> jQuery</li>
          <li> HTML5</li>
          <li> CSS3</li>
          <li> Bootstrap</li>
-         <li> MS Office and its Linux counterparts</li>
          <li> Git</li>
          <li> Jira</li>
-         <li> SAP</li>
+         <li> Agile/Scrum</li>
+         <!-- <li> MS Office and its Linux counterparts</li> -->
     </ul>
     </div>
 
     <div id="right-column">
         <h3>Natural languages:</h3>
         <ul>
-        <li> Dutch: native</li>
-        <li> English: fluent</li>
-        <li> German: fluent</li>
-        <li> Russian: adequate</li>
-        <li> French: adequate</li>
-        <li> Polish: elementary</li>
-        <li> Spanish: elementary</li>
+        <li class="language">
+            <img src="image/flags/nl.png" />
+            Dutch: native
+        </li>
+        <li class="language">
+            <img src="image/flags/uk.png" />
+            English: fluent
+        </li>
+        <li class="language">
+            <img src="image/flags/de.png" />
+            German: fluent
+        </li>
+        <li class="language">
+            <img src="image/flags/fr.png" />
+            French: adequate
+        </li>
+        <li class="language">
+            <img src="image/flags/ru.png" />
+            Russian: adequate
+        </li>
+        <li class="language">
+            <img src="image/flags/pl.png" />
+            Polish: basic
+        </li>
+        <li class="language">
+            <img src="image/flags/sp.png" />
+            Spanish: basicy</li>
     </ul>
     </div>
 </div>
