--- a/My CV/experience.html
+++ b/My CV/experience.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
         <div class="col-2"><b>2016:</b></div>
-        <div class="col">I was an independent international observer at the 2016 parliamentary elections in the Republic of Georgia. In the build up to the elections, I monitored the political conditions and reported on possible threats to the democratic process. During the elections, I collaborated with <i>IPHR</i> and through the <i>Norwegian Helsinki Foundation</i>, I reported my findings to the United Nations.</div>
+        <div class="col">I was an independent international observer at the 2016 parliamentary elections in the Republic of Georgia. In the build up to the elections, I monitored the political conditions and reported on possible threats to the democratic process. During the elections, I collaborated with <iu>IPHR</u> and through the <u>Norwegian Helsinki Foundation</u>, I reported my findings to the United Nations.</div>
   </div>
 </div>
 <hr>
@@ -35,19 +35,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-2"><b>2008-2012:</b></div>
+            <div class="col-2"><b>2002-2008:</b></div>
             <div class="col">Dominicus College Nijmegen: VWO</div>
       </div>
     </div>
-<!-- <b>2013-2015:</b> Catholic University Leuven: 
-Foundation Degree in Slavistics and Eastern-European Studies
-<br>
-<b>2009-2013:</b>
-Radboud University Nijmegen: BA in Philosophy<br>
-
-<br>
-<b>2008-2012:</b>
-Dominicus College Nijmegen: VWO -->
 <hr>
 <h3>Secondary Education</h3>
 <div class="container">
