--- a/My CV/skills.html
+++ b/My CV/skills.html
@@ -50,7 +50,7 @@
         </li>
         <li class="language">
             <img src="image/flags/sp.png" />
-            Spanish: basicy</li>
+            Spanish: basic</li>
     </ul>
     </div>
 </div>
